# hello-nrf52833-clion

./: .gitignore  CMakeLists.txt  README.md  cppmain.cpp  main.c
Src/: cppmain.cpp  main.c
